; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/amd29k/extr_amd29k.c_decode_convert.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/amd29k/extr_amd29k.c_decode_convert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AMD29K_TYPE_REG = common dso_local global i32 0, align 4
@AMD29K_TYPE_IMM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @decode_convert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @decode_convert(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 1
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @AMD29K_TYPE_REG, align 4
  %10 = call i32 @AMD29K_SET_VALUE(i32* %5, i32 0, i32 %8, i32 %9)
  %11 = load i32*, i32** %3, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 2
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @AMD29K_TYPE_REG, align 4
  %16 = call i32 @AMD29K_SET_VALUE(i32* %11, i32 1, i32 %14, i32 %15)
  %17 = load i32*, i32** %3, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 3
  %20 = load i32, i32* %19, align 4
  %21 = and i32 %20, 128
  %22 = ashr i32 %21, 7
  %23 = load i32, i32* @AMD29K_TYPE_IMM, align 4
  %24 = call i32 @AMD29K_SET_VALUE(i32* %17, i32 2, i32 %22, i32 %23)
  %25 = load i32*, i32** %3, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 3
  %28 = load i32, i32* %27, align 4
  %29 = and i32 %28, 112
  %30 = ashr i32 %29, 4
  %31 = load i32, i32* @AMD29K_TYPE_IMM, align 4
  %32 = call i32 @AMD29K_SET_VALUE(i32* %25, i32 3, i32 %30, i32 %31)
  %33 = load i32*, i32** %3, align 8
  %34 = load i32*, i32** %4, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 3
  %36 = load i32, i32* %35, align 4
  %37 = and i32 %36, 12
  %38 = ashr i32 %37, 2
  %39 = load i32, i32* @AMD29K_TYPE_IMM, align 4
  %40 = call i32 @AMD29K_SET_VALUE(i32* %33, i32 4, i32 %38, i32 %39)
  %41 = load i32*, i32** %3, align 8
  %42 = load i32*, i32** %4, align 8
  %43 = getelementptr inbounds i32, i32* %42, i64 3
  %44 = load i32, i32* %43, align 4
  %45 = and i32 %44, 3
  %46 = load i32, i32* @AMD29K_TYPE_IMM, align 4
  %47 = call i32 @AMD29K_SET_VALUE(i32* %41, i32 5, i32 %45, i32 %46)
  ret void
}

declare dso_local i32 @AMD29K_SET_VALUE(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
